--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -10,4 +10,13 @@ ja:
         name: '名前'
         age: '年齢'
         address: '住所'
-        image_name: イメージ
+        image_name: 'イメージ'
+
+ja:
+  views:
+    pagination:
+      first: "&laquo; 最初"
+      last: "最後 &raquo;"
+      previous: "&lsaquo; 前"
+      next: "次 &rsaquo;"
+      truncate: "..."
